@@ -1,5 +1,11 @@
 Revision history for OpenTelemetry-SDK
 
+{{$NEXT}}
+
+    * Ensure shutdown and force_flush calls on the TracerProvider
+      wait for the resuts of propagating those calls down to the
+      processors
+
 0.017     2023-11-20 21:37:36+00:00 Europe/London
 
     * Support recent versions of bignum, which broke
